--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,32 @@
 # Environment variables
 .env
 .env.local
-.env.*.local
+.env*.local
 
-# Dependencies
-node_modules/
-.venv/
+# Python
 __pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.venv/
+venv/
+ENV/
+env/
+*.egg-info/
+.pytest_cache/
+.ruff_cache/
 
-# Build outputs
+# Node
+node_modules/
 .next/
+out/
 dist/
 build/
-*.egg-info/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # IDE
 .vscode/
@@ -20,31 +34,40 @@ build/
 *.swp
 *.swo
 *~
-
-# OS
 .DS_Store
-Thumbs.db
 
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-logs/
+# Generated data
+backend/leads/*.json
+backend/leads/*.html
+!backend/leads/.gitkeep
+backend/meetings/*.json
+backend/meetings/*.html
+!backend/meetings/.gitkeep
+backend/orders/
 
-# Testing
-.pytest_cache/
-coverage/
-.nyc_output/
+# Documentation (keep only README)
+Documnetation.txt
+*_GUIDE.md
+*_SETUP.md
+*_CHECKLIST.md
+*_SUMMARY.md
+*_ARCHITECTURE.md
+*_REFERENCE.md
+START_HERE.md
+RUN_NOW.md
+PHONE_ACCESS_GUIDE.md
+CODE_CHANGES.md
+GITHUB_CHECKLIST.md
+UPGRADE_SUMMARY.md
+QUICK_START.md
+NGROK_SETUP.md
+SYSTEM_ARCHITECTURE.md
+COMPLETION_CHECKLIST.md
+QUICK_REFERENCE.md
+README_GITHUB.md
+DUPLICATE_LEAD_FIX.md
 
 # Misc
-.ruff_cache/
-KMS/
-*.pyc
-*.pyo
-*.pyd
-.Python
-
-# Order files (optional - uncomment to exclude from git)
-# backend/orders/*.json
-# backend/orders/*.html
+*.bak
+*.tmp
+.cache/
