--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "livekit-murf>=0.1.0",
     "livekit-plugins-noise-cancellation~=0.2",
     "python-dotenv",
+    "fastapi>=0.115.0",
+    "uvicorn>=0.32.0",
 ]
 
 [dependency-groups]
